# maktabkhooneh

./: .gitignore  .version-log
CH01/: 01-ListComperhension.py  02-DictionaryHandling.py  03-StringOperations.py  04-Enumeration.py
CH02/arxiv-web-scraping/: README.md  pyproject.toml
CH02/arxiv-web-scraping/src/arxiv_web_scraping/: basic-scraper.py
CH03/taskmanager/: pyproject.toml
CH03/taskmanager/src/taskmanager/: main.py
CH03/taskmanager/src/taskmanager/controllers/: task_controller.py
CH03/taskmanager/src/taskmanager/models/: task_model.py
CH03/taskmanager/src/taskmanager/views/: task_view.py
CH03/taskmanager/tests/: conftest.py  test_integration.py  test_task_controller.py  test_task_model.py  test_task_view.py
