[tool.poetry]
name = "arxiv-web-scraping"
version = "2.0.0"
description = "Basic Scraper: Arxiv.org"
authors = ["Shahin ABDI <contact@shahinabdi.fr>"]
readme = "README.md"
packages = [{include = "arxiv_web_scraping", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
