[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["Shahin ABDI <contact@shahinabdi.fr>"]
readme = "README.md"
packages = [{include = "taskmanager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
